# bubble_backend

./: Cargo.toml  Dockerfile
src/: db.rs  lib.rs  main.rs  startup.rs  token.rs
src/models/: bubble.rs  feed.rs  mod.rs  refresh.rs  saved.rs  user.rs
src/routes/: mod.rs
src/routes/auth/: login.rs  mod.rs  register.rs
src/routes/news/: delete_save.rs  feed.rs  mod.rs  rate.rs  save.rs  saved.rs
